# jarvisctl

./: .dockerignore  .gitignore  Cargo.toml  README.md  prompt.md
.github/workflows/: codex-app-server-schema.yml
contrib/: Dockerfile.kube-runtime  codex-kubernetes-runtime-hostpath.yaml  jarvisctl-dispatch.service  openclaw-hosted-secrets.example.yaml  openclaw-hosted-workers.yaml  openclaw-kubernetes-smoke.yaml  openclaw-nvidia-build-secret.example.yaml  openclaw-nvidia-free-endpoint-probes.yaml  openclaw-nvidia-free-endpoints.yaml  openclaw-validated-probes.yaml
docs/: CODEX_APP_SERVER_MAPPING.md  NORTH_STAR.md
dotfiles/: jarvisctl_status.sh  wayland.config.jsonc
scripts/: check_codex_app_server_schema.sh  cluster_ops_regression.sh  cluster_relay_smoke.sh  production_readiness.sh
src/: agent.rs  autonomy.rs  board.rs  capability.rs  codex.rs  codex_app.rs  control_plane.rs  dispatch.rs  main.rs  mission.rs  native.rs  operator_request.rs  orchestration.rs  proposal.rs  runtime.rs  test_support.rs  ticket.rs  tui.rs
src/control_plane/: kubernetes.rs  reporting.rs  storage.rs
