[package]
name = "jarvisctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.42", features = ["derive"]}
crossterm = "0.29.0"
futures = "0.3.31"
libc = "0.2.171"
portable-pty = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shell-words = "1.1.0"
strip-ansi-escapes = "0.2.1"
sysinfo = "0.36.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "parsing"] }
tokio = { version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
vte = "0.15.0"
